# grids

./: .gitignore  README.md  pyproject.toml
examples/: save_load.py
examples/tmp/: regular_rect_configs.yaml
src/grids/: core.py  utils.py
